feat: add resource register route
